# Prox-Informed-SAM

./: .gitignore  README.md  pyproject.toml
prox_sam/core/: base.py  buffer.py  plugins.py  utils.py
prox_sam/datasets/: cifar.py
prox_sam/methods/: prox_sam.py
prox_sam/models/: resnet.py
results/: baseline_results.json
results/debug/: cifar_metrics.json  cifar_results.json
results/sweep_comb/: 4_naive_lambda0.03_rho0.015_metrics.json  4_naive_lambda0.03_rho0.015_results.json  4_naive_lambda0.03_rho0.05_metrics.json  4_naive_lambda0.03_rho0.05_results.json  4_naive_lambda0.03_rho0.1_metrics.json  4_naive_lambda0.03_rho0.1_results.json  4_naive_lambda0.3_rho0.015_metrics.json  4_naive_lambda0.3_rho0.015_results.json  4_naive_lambda0.3_rho0.05_metrics.json  4_naive_lambda0.3_rho0.05_results.json  4_naive_lambda0.3_rho0.1_metrics.json  4_naive_lambda0.3_rho0.1_results.json  summary_metrics.csv
results/sweep_kl_tr_beta/: kl_tr_beta0.01_metrics.json  kl_tr_beta0.01_results.json  kl_tr_beta0.05_metrics.json  kl_tr_beta0.05_results.json  kl_tr_beta0.1_metrics.json  kl_tr_beta0.1_results.json  kl_tr_beta0.3_metrics.json  kl_tr_beta0.3_results.json  kl_tr_beta0.5_metrics.json  summary_metrics.csv  (+5 more)
scripts/: pack.sh  sweep.py  sweep_main.json  sweep_naive_comb.json  sweep_prox_schedule.json  sweep_prox_tuning.json  sweep_replay_ratio.json  sweep_replay_ratio_sam.json  sweep_replay_tuning.json  sweep_sam_diagnose.json  sweep_sam_phase_rho.json  sweep_sam_tuning.json  sweep_unified_delta_ema.json  sweep_unified_grad_ratio.json  train_cifar.py  visualize_advanced.py
(+165 files in other folders)
